2019-1/221/users/4098/executions/1666_1398.log
== TEST (2019-04-16 09:12:00) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = "RS5000 + (RS100/m)"
	print(round(mensagem,2))
else:
	mensagem = "RS8000 + (RS100 / 200mi) + RS90/m"
	print(round(mensagem,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:12:03) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = "RS5000 + (RS100/m)"
	print(round(mensagem,2))
else:
	mensagem = "RS8000 + (RS100 / 200mi) + RS90/m"
	print(round(mensagem,2))

-- EXECUTION TIME:
0.114484
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1666/1398/main.py", line 6, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:12:04) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = "RS5000 + (RS100/m)"
	print(round(mensagem,2))
else:
	mensagem = "RS8000 + (RS100 / 200mi) + RS90/m"
	print(round(mensagem,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:12:18) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60
if (tv <= 200) :
	mensagem = RS5000 + (RS100/m)
	print(round(mensagem,2))
else:
	mensagem = RS8000 + (RS100 / 200mi) + RS90/m
	print(round(mensagem,2))

-- ERROR:
File "XXXX", line 7
    mensagem = RS8000 + (RS100 / 200mi) + RS90/m
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:12:19) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60
if (tv <= 200) :
	mensagem = RS5000 + (RS100/m)
	print(round(mensagem,2))
else:
	mensagem = RS8000 + (RS100 / 200mi) + RS90/m
	print(round(mensagem,2))

-- EXECUTION TIME:
0.128609
-- ERROR:
  File "/home/codebench/codes/1666/1398/main.py", line 7
    mensagem = RS8000 + (RS100 / 200mi) + RS90/m
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:12:20) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60
if (tv <= 200) :
	mensagem = RS5000 + (RS100/m)
	print(round(mensagem,2))
else:
	mensagem = RS8000 + (RS100 / 200mi) + RS90/m
	print(round(mensagem,2))

-- ERROR:
File "XXXX", line 7
    mensagem = RS8000 + (RS100 / 200mi) + RS90/m
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:12:32) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60
if (tv <= 200) :
	mensagem = 5000 + (100/m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100 / 200mi) + 90/m
	print(round(mensagem,2))

-- ERROR:
File "XXXX", line 7
    mensagem = 8000 + (100 / 200mi) + 90/m
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:12:33) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60
if (tv <= 200) :
	mensagem = 5000 + (100/m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100 / 200mi) + 90/m
	print(round(mensagem,2))

-- EXECUTION TIME:
0.215349
-- ERROR:
  File "/home/codebench/codes/1666/1398/main.py", line 7
    mensagem = 8000 + (100 / 200mi) + 90/m
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:12:33) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60
if (tv <= 200) :
	mensagem = 5000 + (100/m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100 / 200mi) + 90/m
	print(round(mensagem,2))

-- ERROR:
File "XXXX", line 7
    mensagem = 8000 + (100 / 200mi) + 90/m
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:12:42) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + (100/m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100 / 200mi) + 90/m
	print(round(mensagem,2))

-- ERROR:
File "XXXX", line 8
    mensagem = 8000 + (100 / 200mi) + 90/m
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:13:04) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + (100/m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100 / 200) + 90/m
	print(round(mensagem,2))

-- OUTPUT:
5001.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:13:06) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + (100/m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100 / 200) + 90/m
	print(round(mensagem,2))

-- EXECUTION TIME:
0.18008
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
5001.67
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
8002.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5001.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:13:07) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + (100/m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100 / 200) + 90/m
	print(round(mensagem,2))

-- OUTPUT:
5001.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:13:15) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100 / 200) + 90
	print(round(mensagem,2))

-- OUTPUT:
5100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:13:17) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100 / 200) + 90
	print(round(mensagem,2))

-- EXECUTION TIME:
0.178697
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
5100
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
8090.5
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:13:20) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100 / 200) + 90
	print(round(mensagem,2))

-- EXECUTION TIME:
0.176451
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
5100
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
5100
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
8090.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:13:20) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100 / 200) + 90
	print(round(mensagem,2))

-- EXECUTION TIME:
0.156558
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
5100
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
8090.5
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:13:27) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100
	print(round(mensagem,2))
else:
	mensagem = 8000 + 100 + 90
	print(round(mensagem,2))

-- OUTPUT:
5100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:13:27) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100
	print(round(mensagem,2))
else:
	mensagem = 8000 + 100 + 90
	print(round(mensagem,2))

-- EXECUTION TIME:
0.122986
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
5100
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
8190
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:13:28) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100
	print(round(mensagem,2))
else:
	mensagem = 8000 + 100 + 90
	print(round(mensagem,2))

-- OUTPUT:
5100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:13:29) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100
	print(round(mensagem,2))
else:
	mensagem = 8000 + 100 + 90
	print(round(mensagem,2))

-- EXECUTION TIME:
0.176757
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
5100
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
8190
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:13:45) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100
	print(round(mensagem,2))
else:
	mensagem = 8000 + 100 + 90
	print(round(mensagem,2))

-- OUTPUT:
5100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:14:18) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100*m
	print(round(mensagem,2))
else:
	mensagem = 8000 + 100 + 90*m
	print(round(mensagem,2))

-- OUTPUT:
11000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:14:20) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100*m
	print(round(mensagem,2))
else:
	mensagem = 8000 + 100 + 90*m
	print(round(mensagem,2))

-- EXECUTION TIME:
0.153708
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
11000
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
13500
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
11000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:14:21) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + 100*m
	print(round(mensagem,2))
else:
	mensagem = 8000 + 100 + 90*m
	print(round(mensagem,2))

-- OUTPUT:
11000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:15:01) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = 5000 + (100*m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100*200) + (90*m)
	print(round(mensagem,2))

-- OUTPUT:
11000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:17:07) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 120

if (tv <= 200) :
	mensagem = 5000 + (100*m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100*200) + (90*m)
	print(round(mensagem,2))

-- OUTPUT:
17000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:17:21) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 100

if (tv <= 200) :
	mensagem = 5000 + (100*m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100*200) + (90*m)
	print(round(mensagem,2))

-- OUTPUT:
15000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:17:25) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 100

if (tv <= 200) :
	mensagem = 5000 + (100*m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100*200) + (90*m)
	print(round(mensagem,2))

-- OUTPUT:
15000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:17:33) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 100

if (tv <= 200) :
	mensagem = 5000 + (100*m)
	print(round(mensagem,2))
else:
	mensagem = 8000 + (100*200) + (90*m)
	print(round(mensagem,2))

-- EXECUTION TIME:
0.159821
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
15000
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
37000
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
15000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:18:03) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 100

if (tv <= 200) :
	mensagem = (5000 + (100*m))
	print(round(mensagem,2))
else:
	mensagem = (8000 + (100*200) + (90*m))
	print(round(mensagem,2))

-- OUTPUT:
15000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:18:04) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 100

if (tv <= 200) :
	mensagem = (5000 + (100*m))
	print(round(mensagem,2))
else:
	mensagem = (8000 + (100*200) + (90*m))
	print(round(mensagem,2))

-- EXECUTION TIME:
0.185269
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
15000
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
37000
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
15000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:40:35) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = (5000 + (100*m))
	print(round(mensagem,2))
else:
	mensagem = (8000 + (100*200*m) + (90*m))
	print(round(mensagem,2))

-- OUTPUT:
11000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:40:36) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = (5000 + (100*m))
	print(round(mensagem,2))
else:
	mensagem = (8000 + (100*200*m) + (90*m))
	print(round(mensagem,2))

-- EXECUTION TIME:
0.188419
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
11000
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
1213400
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
11000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:40:37) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = (5000 + (100*m))
	print(round(mensagem,2))
else:
	mensagem = (8000 + (100*200*m) + (90*m))
	print(round(mensagem,2))

-- OUTPUT:
11000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:40:56) 
-- CODE:
tv = int(input("tempo de voo: "))
m = 60

if (tv <= 200) :
	mensagem = (5000 + (100*m))
	print(round(mensagem,2))
else:
	mensagem = (8000 + (100*200/60) + (90*m))
	print(round(mensagem,2))

-- OUTPUT:
11000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
